Fixed not showing current user status in bottom left corner.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -524,7 +524,7 @@ body.logged-out
   &:after
     position absolute
     right 5px
-    top 5px
+    top 8px
     content: ''
     width 12px
     height 16px
@@ -536,10 +536,13 @@ body.logged-out
   &:hover:after
     opacity 1
 
+  .username
+    font-size 12px
+
 .choose-status-menu
   position fixed
   left 5px
-  bottom 37px
+  bottom 45px
   width room-sidebar-width - 10px
 
 .settings-icon-cell
